# mosaic

./: .gitignore  .ocamlformat  CHANGES.md  README.md  TODO.md  dune-project  matrix-term.opam  matrix.opam  mosaic.opam  shito.opam  test_toffee.ml  toffee.opam  vcr.opam
.github/workflows/: ci.yaml
examples/: dune  interactive.ml  layout_demo.ml  panel_demo.ml  progress_bar_example.ml  simple.ml  table_demo.ml  ui_primitives_demo.ml
examples/charts/: dune
examples/component_counter/: README.md  counter.ml  dune  main.ml
examples/countdown/: countdown.ml  dune
examples/highlighting/: dune
examples/list_select/: README.md  dune  list_select.ml
examples/markdown/: dune  markdown.ml
lib/: cmd.ml  cmd.mli  component.ml  component.mli  dune  mosaic.ml  mosaic.mli  sub.ml  sub.mli  ui.ml  ui.mli
lib/syntax/: .ocamlformat-ignore  dune  grammars.ml  mosaic_syntax.ml  mosaic_syntax.mli  theme.ml  theme.mli  themes.ml
lib/syntax/pp/: dune
lib/syntax/tm-syntaxes/: dune.json  ocaml.interface.json
lib/syntax/tm-themes/: solarized-dark.json
matrix/: README.md
matrix-term/: README.md  dune  main.ml
matrix/bench/: README.md  bench_ansi.ml  bench_glyph.ml  bench_grid.ml  bench_input.ml  bench_screen.ml  dune
matrix/examples/x-emulator/: dune  dune-project  main.ml
matrix/test/: dune  test_ansi.ml  test_glyph.ml  test_grid.ml  test_input.ml  test_pty.ml  test_screen.ml  test_terminal.ml  test_vte.ml  test_vte_damage.ml  test_vte_unicode.ml  test_vte_vttest.ml
matrix/test/charts/: dune  test_charts.ml
matrix/test/vttest/: dune  run_vttest_interactive.ml  vttest_debug.ml
mosaic/: README.md
mosaic/examples/x-syspanel/: README.md  dune  main.ml  metrics_stubs.c  sysstat.ml  sysstat.mli  sysstat_stubs.c
mosaic/examples/x-syspanel/config/: discover.ml
mosaic/test/expect/: dune  harness.ml  harness.mli  test_canvas.ml  test_charts.ml  test_counter.ml  test_panel.ml  test_progress_bar.ml  test_scroll_box.ml  test_spinner.ml  test_table.ml  test_tree.ml  test_ui.ml
mosaic/test/failing/: basic_ui.ml  dune
mosaic/test/markdown/: dune  test_markdown.ml
mosaic/test/ui/: dune  test_box.ml  test_canvas.ml  test_code.ml  test_scroll_bar.ml  test_scroll_box.ml  test_select.ml  test_slider.ml  test_tab_select.ml  test_table.ml  test_text.ml  test_text_input.ml
shito/: LICENSE
test/: dune  test_event_source.ml  test_input.ml  test_sub.ml  test_ui.ml  test_utils.ml
test/unit/: dune  test_ansi.ml  test_cmd.ml  test_event_source.ml  test_gradient.ml  test_input.ml  test_markdown.ml  test_render.ml  test_ui.ml  test_utils.ml
toffee/: README.md  dune-project  toffee.opam
toffee/bench/: README.md  bench_toffee.ml  dune
toffee/examples/: README.md
toffee/examples/01-basic/: README.md  main.ml
toffee/examples/02-nested/: README.md  main.ml
toffee/examples/03-flexbox-gap/: README.md  main.ml
toffee/examples/04-grid-holy-grail/: README.md  main.ml
toffee/examples/05-measure/: README.md  dune  main.ml
toffee/lib/: dune  geometry.ml  geometry.mli  style.ml  style.mli  toffee.ml  toffee.mli
toffee/lib/compute/: block_layout.ml  compute.ml  compute.mli  dune  flexbox_layout.ml  grid_layout.ml  leaf.ml  leaf.mli  leaf_layout.ml
toffee/lib/compute/block/: compute_block.ml  compute_block.mli  dune
toffee/lib/compute/common/: alignment.ml  content_size.ml
toffee/lib/compute/flexbox/: compute_flexbox.ml  compute_flexbox.mli  dune
toffee/lib/compute/grid/: alignment.ml  alignment.mli  cell_occupancy.ml  cell_occupancy.mli  compute_grid.ml  compute_grid.mli  coordinates.ml  coordinates.mli  dune  explicit_grid.ml  explicit_grid.mli  grid_alignment.ml  grid_item.ml  grid_item.mli  grid_placement.ml  grid_track.ml  grid_track.mli  grid_track_counts.ml  grid_track_counts.mli  grid_track_sizing.ml  implicit_grid.ml  implicit_grid.mli  named.ml  named.mli  placement.ml  placement.mli  track_sizing.ml  track_sizing.mli
toffee/lib/compute/grid/types/: grid_cell_occupancy.ml  grid_coordinates.ml  grid_grid_axis_helpers.ml  grid_helpers.ml  grid_item.ml  grid_track.ml  grid_track_counts.ml  grid_tree_interface.ml
toffee/lib/compute/helpers/: compute_helpers.ml  compute_helpers.mli  dune
toffee/lib/geometry/: absolute_axis.ml  absolute_axis.mli  abstract_axis.ml  abstract_axis.mli  dune  geometry.ml  geometry.mli  in_both_abs_axis.ml  in_both_abs_axis.mli  line.ml  line.mli  min_max.ml  min_max.mli  point.ml  point.mli  rect.ml  rect.mli  size.ml  size.mli
toffee/lib/style/: alignment.ml  alignment.mli  box_generation_mode.ml  box_generation_mode.mli  box_sizing.ml  box_sizing.mli  compact_length.ml  compact_length.mli  dimension.ml  dimension.mli  display.ml  display.mli  dune  flex_direction.ml  flex_direction.mli  flex_wrap.ml  flex_wrap.mli  grid.ml  grid.mli  grid_auto_flow.ml  grid_auto_flow.mli  grid_placement.ml  grid_placement.mli  grid_repetition.ml  grid_repetition.mli  grid_template_area.ml  grid_template_area.mli  grid_template_component.ml  grid_template_component.mli  length_percentage.ml  length_percentage.mli  length_percentage_auto.ml  length_percentage_auto.mli  overflow.ml  overflow.mli  position.ml  position.mli  repetition_count.ml  repetition_count.mli  style.ml  (+5 more)
toffee/lib/tree/: available_space.ml  available_space.mli  cache.ml  cache.mli  collapsible_margin_set.ml  collapsible_margin_set.mli  dune  layout.ml  layout.mli  layout_input.ml  layout_input.mli  layout_output.ml  layout_output.mli  node.ml  node_id.ml  node_id.mli  requested_axis.ml  requested_axis.mli  run_mode.ml  run_mode.mli  sizing_mode.ml  sizing_mode.mli  toffee_tree.ml  tree.ml  tree.mli  tree_intf.ml
toffee/lib/util/: math.ml  resolve.ml
toffee/test/: dune  test_grid.ml  test_toffee.ml
toffee/test/gentest/: README.md  gentest.js  package-lock.json  package.json
vcr/: README.md
vcr/lib/renderer/: ascii_renderer.ml  ascii_renderer.mli  dune  font_renderer.ml  font_renderer.mli  gif_renderer.ml  gif_renderer.mli  grid_diff.ml  grid_diff.mli  png_renderer.ml  renderer.ml  renderer_intf.mli  svg_renderer.ml  svg_renderer.mli  vg_renderer.ml  vg_renderer.mli
(+801 files in other folders)
