(data_only_dirs data)

(test
 (name test_ansi)
 (libraries alcotest ansi))

(test
 (name test_glyph)
 (libraries alcotest glyph))

(test
 (name test_grid)
 (libraries alcotest uutf grid glyph ansi))

(test
 (name test_input)
 (libraries alcotest unix input))

(test
 (name test_vte)
 (libraries alcotest uutf vte grid ansi))

(test
 (name test_pty)
 (libraries alcotest unix pty))

(test
 (name test_terminal)
 (libraries alcotest terminal unix ansi input))

(test
 (name test_screen)
 (libraries alcotest str screen grid glyph ansi terminal unix input))
