(data_only_dirs data)

(test
 (name test_ansi)
 (package matrix)
 (libraries windtrap ansi))

(test
 (name test_glyph)
 (package matrix)
 (libraries windtrap glyph))

(test
 (name test_grid)
 (package matrix)
 (libraries windtrap grid glyph ansi))

(test
 (name test_input)
 (package matrix)
 (libraries windtrap unix input))

(test
 (name test_vte)
 (package matrix)
 (libraries windtrap vte grid ansi))

(test
 (name test_pty)
 (package matrix)
 (libraries windtrap unix pty))

(test
 (name test_terminal)
 (package matrix)
 (libraries windtrap terminal unix ansi input))

(test
 (name test_screen)
 (package matrix)
 (libraries windtrap str screen grid glyph ansi terminal unix input))
