(executable
 (name test_charts)
 (libraries windtrap matrix.ansi matrix.grid matrix.charts)
 (preprocess
  (pps windtrap.ppx)))

(rule
 (alias runtest)
 (package matrix)
 (action
  (progn
   (setenv
    WINDTRAP_PROMOTE
    true
    (run ./test_charts.exe))
   (diff? test_charts.ml test_charts.ml.corrected))))
