(library
 (name sysstat)
 (modules sysstat)
 (libraries unix str)
 (foreign_stubs
  (language c)
  (flags
   (:standard
    (:include c_flags.sexp)))
  (names sysstat_stubs))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run %{exe:config/discover.exe})))

(executable
 (name main)
 (modules main)
 (libraries
  mosaic
  mosaic.ui
  matrix.charts
  matrix.grid
  matrix.ansi
  sysstat
  unix))
