(executables
 (names test_counter test_scroll_box)
 (libraries
  windtrap
  mosaic
  mosaic.ui
  matrix
  matrix.grid
  matrix.screen
  matrix.input
  matrix.vte)
 (preprocess
  (pps windtrap.ppx)))

(rule
 (alias runtest)
 (package mosaic)
 (action
  (progn
   (setenv
    WINDTRAP_PROMOTE
    true
    (progn
     (run ./test_counter.exe)
     (run ./test_scroll_box.exe)))
   (diff? test_counter.ml test_counter.ml.corrected)
   (diff? test_scroll_box.ml test_scroll_box.ml.corrected))))
