(executables
 (names
  basic_ui
  text_align
  check_vbox_align
  test_text_width
  test_tab_expansion
  test_zbox
  test_zbox_center
  test_wrap
  test_wrap_debug
  test_wrap_inspect
  test_wrap_direct
  test_wrap_print
  test_wrap_box_height
  test_scroll
  test_scroll_debug
  test_flow_wrap
  test_flow_wrap_measure
  test_word_wrap
  test_flow_wrap_width
  test_flow_word_split
  test_flow_zz
  test_exact_case
  test_flow_gap
  test_wrap_7chars
  test_border_overlap
  test_wrap_constraint
  test_bounds_debug)
 (libraries
  test_utils
  mosaic.ui
  mosaic
  matrix.screen
  matrix.grid
  toffee
  uutf))
