(executable
 (name test_markdown)
 (libraries windtrap mosaic.ui mosaic.markdown)
 (preprocess
  (pps windtrap.ppx)))

(rule
 (alias runtest)
 (package mosaic)
 (action
  (progn
   (setenv
    WINDTRAP_PROMOTE
    true
    (run ./test_markdown.exe))
   (diff? test_markdown.ml test_markdown.ml.corrected))))
