(tests
 (names
  test_box
  test_canvas
  test_code
  test_scroll_bar
  test_scroll_box
  test_select
  test_slider
  test_spinner
  test_tab_select
  test_table
  test_text_input
  test_text)
 (package mosaic)
 (libraries windtrap mosaic.ui mosaic.syntax toffee matrix.ansi matrix.grid)
 (preprocess
  (pps windtrap.ppx)))
