(executables
 (names
  test_box
  test_canvas
  test_code
  test_scroll_bar
  test_scroll_box
  test_select
  test_slider
  test_spinner
  test_tab_select
  test_table
  test_text_input
  test_text)
 (libraries windtrap mosaic.ui mosaic.syntax toffee matrix.ansi matrix.grid)
 (preprocess
  (pps windtrap.ppx)))

(rule
 (alias runtest)
 (package mosaic)
 (action
  (progn
   (setenv
    WINDTRAP_PROMOTE
    true
    (progn
     (run ./test_box.exe)
     (run ./test_canvas.exe)
     (run ./test_code.exe)
     (run ./test_scroll_bar.exe)
     (run ./test_scroll_box.exe)
     (run ./test_select.exe)
     (run ./test_slider.exe)
     (run ./test_spinner.exe)
     (run ./test_tab_select.exe)
     (run ./test_table.exe)
     (run ./test_text_input.exe)
     (run ./test_text.exe)))
   (diff? test_box.ml test_box.ml.corrected)
   (diff? test_canvas.ml test_canvas.ml.corrected)
   (diff? test_code.ml test_code.ml.corrected)
   (diff? test_scroll_bar.ml test_scroll_bar.ml.corrected)
   (diff? test_scroll_box.ml test_scroll_box.ml.corrected)
   (diff? test_select.ml test_select.ml.corrected)
   (diff? test_slider.ml test_slider.ml.corrected)
   (diff? test_spinner.ml test_spinner.ml.corrected)
   (diff? test_tab_select.ml test_tab_select.ml.corrected)
   (diff? test_table.ml test_table.ml.corrected)
   (diff? test_text_input.ml test_text_input.ml.corrected)
   (diff? test_text.ml test_text.ml.corrected))))
