(library
 (name renderer)
 (public_name vcr.renderer)
 (modules_without_implementation renderer_intf)
 (modules
  renderer
  renderer_intf
  font_renderer
  vg_renderer
  gif_renderer
  ascii_renderer
  png_renderer
  grid_diff)
 (libraries
  str
  unix
  matrix.vte
  matrix.ansi
  logs
  gg
  vg
  gif
  freetype
  harfbuzz
  vcr_fonts
  vcr.png))
